; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/radio/extr_radio-maestro.c_vidioc_g_audio.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/radio/extr_radio-maestro.c_vidioc_g_audio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i32 }
%struct.v4l2_audio = type { i32, i32, i64 }

@.str = private unnamed_addr constant [6 x i8] c"Radio\00", align 1
@V4L2_AUDCAP_STEREO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, i8*, %struct.v4l2_audio*)* @vidioc_g_audio to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vidioc_g_audio(%struct.file* %0, i8* %1, %struct.v4l2_audio* %2) #0 {
  %4 = alloca %struct.file*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.v4l2_audio*, align 8
  store %struct.file* %0, %struct.file** %4, align 8
  store i8* %1, i8** %5, align 8
  store %struct.v4l2_audio* %2, %struct.v4l2_audio** %6, align 8
  %7 = load %struct.v4l2_audio*, %struct.v4l2_audio** %6, align 8
  %8 = getelementptr inbounds %struct.v4l2_audio, %struct.v4l2_audio* %7, i32 0, i32 2
  store i64 0, i64* %8, align 8
  %9 = load %struct.v4l2_audio*, %struct.v4l2_audio** %6, align 8
  %10 = getelementptr inbounds %struct.v4l2_audio, %struct.v4l2_audio* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @strlcpy(i32 %11, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i32 4)
  %13 = load i32, i32* @V4L2_AUDCAP_STEREO, align 4
  %14 = load %struct.v4l2_audio*, %struct.v4l2_audio** %6, align 8
  %15 = getelementptr inbounds %struct.v4l2_audio, %struct.v4l2_audio* %14, i32 0, i32 0
  store i32 %13, i32* %15, align 8
  ret i32 0
}

declare dso_local i32 @strlcpy(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
